favourite animal by basha

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <!-- SEO SETTINGS FOR GOOGLE-->
     <meta name="author" content="HacktoberPet by Junior Developer Group" />
-    <meta name="description" content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+    <meta name="description"
+        content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
 
     <!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
     <meta name="og:title" property="og:title" content="HacktoberPet by Junior Developer Group" />
-    <meta property="og:description" content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+    <meta property="og:description"
+        content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
     <meta property="og:image" content="/assets/website-images/logo-with-background.png" />
 
     <!-- WEBSITE TITLE-->
@@ -55,10 +57,12 @@
                 </a>
             </p>
 
-            <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and have fun making it. </p>
+            <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and
+                have fun making it. </p>
 
             <p>
-                Before you start, please have a look at a couple of participation rules I've set up. Not following the set rules might get your pull request rejected.
+                Before you start, please have a look at a couple of participation rules I've set up. Not following the
+                set rules might get your pull request rejected.
             </p>
 
             <div class="welcome-content__rules">
@@ -129,7 +133,8 @@
                 <h1 class="card-cho__title"> Chombe 🐶
                 </h1>
                 <p class="card-cho__text show">
-                    Chombe, my favourite sweet Dog, he use to fallow me everywhere!, true friend, he will always be in my heart ❤
+                    Chombe, my favourite sweet Dog, he use to fallow me everywhere!, true friend, he will always be in
+                    my heart ❤
                 </p>
 
             </div>
@@ -171,7 +176,8 @@
             <div class="oreo-content">
                 <h2 class="oreo-title">OREO</h2>
                 <p class="oreo-body">
-                    Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy, loves fish and he hates pedigree.
+                    Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy,
+                    loves fish and he hates pedigree.
                 </p>
             </div>
         </div>
@@ -186,7 +192,8 @@
                 </div>
                 <div class="buddyCardBack">
                     <h1>Buddy</h1>
-                    <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and although he is retired now he still keeps me on my toes!</p>
+                    <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and
+                        although he is retired now he still keeps me on my toes!</p>
                     <ul>
                         <li>❤️ Age: 24</li>
                         <li>❤️ Likes: Food! </li>
@@ -249,7 +256,8 @@
             <div class="catthew-info">
                 <p> <strong>Name:</strong> Catthew 👑</p>
                 <p> <strong>Age:</strong> 1 and a bit </p>
-                <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on keyboards 🐱 </p>
+                <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on
+                    keyboards 🐱 </p>
                 <p> <strong>Friends:</strong> Busy Cat, Girl Cat </p>
                 <p> <strong>Enemies:</strong> Old White Cat </p>
             </div>
@@ -297,7 +305,8 @@
                         <br />
                         <strong>Age:</strong> 2 years old
                         <br />
-                        <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell peppers
+                        <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell
+                        peppers
                         <br />
                         <strong>Dislikes</strong>: Being alone, being ignored.
                         <br />
@@ -400,7 +409,8 @@
                         Cheetah
                     </div>
                     <div class="ruman-card-details-content-description">
-                        My favourite animal is Cheetah because they are fast and in fact, is the fastest animal in the world. The cheetah print stuff is preety cool as well.
+                        My favourite animal is Cheetah because they are fast and in fact, is the fastest animal in the
+                        world. The cheetah print stuff is preety cool as well.
                     </div>
                 </div>
             </div>
@@ -415,7 +425,8 @@
                             target="_blank">Pomeraninan</a></span>
                     <div class="rocky-name">Rocky</div>
                     <hr>
-                    <p>This is Rocky my adorable Pomeraninan<br> He loves to sit on the sofa all day and barks at anyone who disturbs his sleep <br> Also he loves eating my snacks. </p>
+                    <p>This is Rocky my adorable Pomeraninan<br> He loves to sit on the sofa all day and barks at anyone
+                        who disturbs his sleep <br> Also he loves eating my snacks. </p>
                     <button class="my-git"> <a href="https://en.wikipedia.org/wiki/Pomeranian_dog"
                             target="_blank">Pomeraninan</a></button>
                 </div>
@@ -432,7 +443,8 @@
                             target="_blank">Poodle</a></span>
                     <div class="rocky-name">Hazel</div>
                     <hr>
-                    <p>This is Hazel my adorable Poodle<br> She loves to roam around the parks and street and eat tasty food. She loves guests and everyone loves her. <br> Also, she loves sleeping a lot. </p>
+                    <p>This is Hazel my adorable Poodle<br> She loves to roam around the parks and street and eat tasty
+                        food. She loves guests and everyone loves her. <br> Also, she loves sleeping a lot. </p>
                     <button class="my-git"> <a href="https://en.wikipedia.org/wiki/Poodle"
                             target="_blank">Poodle</a></button>
                 </div>
@@ -474,17 +486,26 @@
                 </div>
                 <div class="left_container off">
                     <img src="./assets/images/ru.gif" alt="dog saving child">
-                    <p>The Caucasian Shepherd Dog were bred to care for flocks and defend the home against wild predators in the rough Caucasus Mountain region. They’re also known as Caucasian Mountain Dogs, Russian Bear Dogs, Baskhan (Karachay) Pariy, Caucasian
-                        Ovcharka Dogs, or just CO, and there are many variants and types. This massive breed is highly territorial and won’t back down from a fight, even against bears or wolves. Caucasian Shepherd Dogs are intelligent, but their stubborn,
+                    <p>The Caucasian Shepherd Dog were bred to care for flocks and defend the home against wild
+                        predators in the rough Caucasus Mountain region. They’re also known as Caucasian Mountain Dogs,
+                        Russian Bear Dogs, Baskhan (Karachay) Pariy, Caucasian
+                        Ovcharka Dogs, or just CO, and there are many variants and types. This massive breed is highly
+                        territorial and won’t back down from a fight, even against bears or wolves. Caucasian Shepherd
+                        Dogs are intelligent, but their stubborn,
                         independent nature can make them difficult to train.
                     </p>
 
                     <div class="icons">
-                        <a href="https://github.com/Jaytru1997"><img src="./assets/icons/github.png" alt="github icon"></a>
-                        <a href="https://www.linkedin.com/in/oghenekparobo-o-997a6b17b"><img src="./assets/icons/linkedin.png" alt="linkedin icon"></a>
-                        <a href="https://instagram.com/an_onosemuode"><img src="./assets/icons/instagram.png" alt="instagram icon"></a>
-                        <a href="https://www.facebook.com/oghenekparobo.onosemuode"><img src="./assets/icons/facebook.png" alt="facebook icon"></a>
-                        <a href="https://discord.gg/ZJbmV6q9pD"><img src="./assets/icons/discord.png" alt="discord icon"></a>
+                        <a href="https://github.com/Jaytru1997"><img src="./assets/icons/github.png"
+                                alt="github icon"></a>
+                        <a href="https://www.linkedin.com/in/oghenekparobo-o-997a6b17b"><img
+                                src="./assets/icons/linkedin.png" alt="linkedin icon"></a>
+                        <a href="https://instagram.com/an_onosemuode"><img src="./assets/icons/instagram.png"
+                                alt="instagram icon"></a>
+                        <a href="https://www.facebook.com/oghenekparobo.onosemuode"><img
+                                src="./assets/icons/facebook.png" alt="facebook icon"></a>
+                        <a href="https://discord.gg/ZJbmV6q9pD"><img src="./assets/icons/discord.png"
+                                alt="discord icon"></a>
                     </div>
                     <div class="cancel center">
                         <img src="./assets/icons/cancel.png" alt="cancel button">
@@ -507,7 +528,10 @@
                 <li>Deadly.</li>
             </ul>
             <p>
-                Photo by <a href="https://unsplash.com/@mpayne66?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Michael Payne</a> on <a href="https://unsplash.com/s/photos/red-panda?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                Photo by <a
+                    href="https://unsplash.com/@mpayne66?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    target="_blank">Michael Payne</a> on <a
+                    href="https://unsplash.com/s/photos/red-panda?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                     target="_blank">Unsplash</a>
             </p>
         </div>
@@ -518,14 +542,16 @@
         <!-------------------------rambo-start---------------------------->
         <div class="rambo">
             <div class="rambo-image">
-                <img src="./assets/images/pandu.jpg" alt="pandu" width="100%" height="100%" style="border-top-left-radius: 19px ;">
+                <img src="./assets/images/pandu.jpg" alt="pandu" width="100%" height="100%"
+                    style="border-top-left-radius: 19px ;">
             </div>
             <div class="rambo-head">
                 <div id="p1">Rambo</div>
                 <div class="rambo-text" id="p2">A 4-years old, 10 Kgs
                     <div id="p3" color: red;>
                         Red Panda
-                    </div>, who likes to EAT, EAT and EAT. Also an extrovert who enjoys meeting strangers.</div>
+                    </div>, who likes to EAT, EAT and EAT. Also an extrovert who enjoys meeting strangers.
+                </div>
             </div>
             <div class="rambo-foot">
                 <button onclick="window.location.href='https://www.worldwildlife.org/species/red-panda'">More about Red
@@ -558,7 +584,8 @@
         <!-- TIGGER-END -->
 
         <!-- Jimmy's Card -->
-        <div class="card" style="width: 18rem; height: 730px; background-color: rgba(248, 71, 71, 0.555); text-align: center;">
+        <div class="card"
+            style="width: 18rem; height: 730px; background-color: rgba(248, 71, 71, 0.555); text-align: center;">
             <img class="card-img-top jimmy-img" src="./assets/images/jimmy.jpeg" alt="Card image cap">
             <div class="card-body">
                 <h1 class="card-title">Jimmy</h1>
@@ -617,7 +644,8 @@
         <div class="promise shepherd">
             <h2 class="shepherd">German Shepherd</h2>
             <p>The German Shepherd Dog is one of America’s most popular dog breeds </p>
-            <div class="learn-container shepherd" target="_blank"><a href="https://dogtime.com/dog-breeds/german-shepherd-dog#/slide/1" class="learn">Learn More</a>
+            <div class="learn-container shepherd" target="_blank"><a
+                    href="https://dogtime.com/dog-breeds/german-shepherd-dog#/slide/1" class="learn">Learn More</a>
             </div>
             <div class="dog_circle shepherd"></div>
         </div>
@@ -745,7 +773,8 @@
                 <div class="tl-description">
                     <div class="tl-gradient-border">
                         <div class="content">
-                            A professional toy ripper, nationally ranked barker and lover of belly rubs. Freyja loves a frisbee, chicken and salmon, and stealing Dad's shoes!
+                            A professional toy ripper, nationally ranked barker and lover of belly rubs. Freyja loves a
+                            frisbee, chicken and salmon, and stealing Dad's shoes!
                         </div>
                     </div>
                 </div>
@@ -780,10 +809,12 @@
             <div class="second">
                 <h1 id="name">Denny</h1>
                 <p class="text"><span class="wrap-me">Age:</span>6 years old</p>
-                <p class="text"><span class="wrap-me">Hobby:</span> Deer loves to run and jump he also swim time to time.
+                <p class="text"><span class="wrap-me">Hobby:</span> Deer loves to run and jump he also swim time to
+                    time.
                 </p>
                 <p class="text"><span class="wrap-me">Location: </span>He lives in Warsaw along with me</p>
-                <a href="https://github.com/ratsagi"><img class="gh-icon" src="assets/icons/github.png" alt="my github"></a>
+                <a href="https://github.com/ratsagi"><img class="gh-icon" src="assets/icons/github.png"
+                        alt="my github"></a>
                 <button id="click-me">Find more about deer!</button>
             </div>
         </div>
@@ -822,7 +853,8 @@
 
 
         <!-- harshit's card  -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <div class="cardss">
             <img src="https://picsum.photos/id/237/200/300" alt="John" style="width:100%" height="50%">
@@ -838,10 +870,12 @@
 
 
         <!-- Shubham's Card -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <div class="cardsss">
-            <img src="https://images.unsplash.com/photo-1617895153857-82fe79adfcd4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="John" style="width:100%" height="50%">
+            <img src="https://images.unsplash.com/photo-1617895153857-82fe79adfcd4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+                alt="John" style="width:100%" height="50%">
             <h1>Siberian Husky</h1>
             <p class="titles"> Working Sled Dog Breed</p>
             <p class="titles">Loyal , Trained Dog</p>
@@ -850,14 +884,15 @@
             <a href="https://en.wikipedia.org/wiki/Siberian_Husky" class="btn">Read more</a>
         </div>
 
-        
+
 
         <!-- Sheru's Card Start-->
         <div class="main_sheru_card">
             <img src="assets/images/sheru.jpg" alt="">
             <div class="sheru_info">
                 <h2>🐾Sheru🐾</h2>
-                <p><b>Hobby:</b> Eating and sleeping all day<br><b>Strength:</b> john wick look<br> <b>Weakness:</b> cat next door </p>
+                <p><b>Hobby:</b> Eating and sleeping all day<br><b>Strength:</b> john wick look<br> <b>Weakness:</b> cat
+                    next door </p>
             </div>
         </div>
         <!-- Sheru's Card End -->
@@ -904,7 +939,8 @@
                     <li>Saved the world from evil cats</li>
                 </ul>
                 <p class="ash-link-text">
-                    Learn more at <a class="ash-link-wiki" href="https://en.wikipedia.org/wiki/Beagle" target="_blank">wikipedia</a>
+                    Learn more at <a class="ash-link-wiki" href="https://en.wikipedia.org/wiki/Beagle"
+                        target="_blank">wikipedia</a>
                 </p>
             </div>
         </div>
@@ -946,6 +982,19 @@
                 </div>
             </div>
         </div>
+        <!-- Basha's card -->
+        <div class="bash-container">
+            <div class="bash-card">
+                <img  class="img-tiger" src="/assets/images/kartik-iyer-XCg1BQf-fso-unsplash.jpg"
+                    alt="Image of a Tiger standing next to a tree">
+                <h4>Favorite Animal</h4>
+                <p>Tiger</p>
+                <h5>Fun Fact</h5>
+                <p>A tiger’s roar can be heard as far as three kilometres away.</p>  
+            </div>
+
+        </div>
+        <!-- end of Basha's  Card-->
     </section>
 
     <footer>
